Seeing if a glm model works better for egg counting in experiment 1.

--- a/Data Analysis Notebook.Rmd
+++ b/Data Analysis Notebook.Rmd
@@ -27,6 +27,7 @@ So what is preffered: good normality or good linearity/ homogenity? go with glm.
 ```{r}
 performance::check_model(eggcountinglsglm)
 performance::check_model(eggcountinglsglm, check = c("qq"))
+summary(eggcountinglsglm)
 ```
 
 
