Selected what is significant for the exp1all model from an emmeans summary pairwise analysis.

--- a/Data Analysis Notebook.Rmd
+++ b/Data Analysis Notebook.Rmd
@@ -144,7 +144,12 @@ forgot to include day in the emmeans
 - female day1 1;2 - female day2 8;1
 -  male day1 1;2 - female day1 2;1
 -  male day1 1;2 - female day2 2;1  
-- 
+-  male day1 1;2 - female day1 8;1 
+- male day1 1;2 - female day2 8;1
+- female day2 1;2 - female day1 2;1
+- male day1 1;2 - female day2 2;1 
+- male day1 1;2 - female day1 8;1
+
 
 2~903 
 
