--- a/Data Analysis Notebook.Rmd
+++ b/Data Analysis Notebook.Rmd
@@ -151,6 +151,10 @@ forgot to include day in the emmeans
 - male day1 1;2 - female day1 8;1
 
 
+
+male day1 8;1 - male day2 8;1     -0.16353 0.0835 903  -1.958  0.8474
+
+selecting what is interesting with regards to day?? 
 2~903 
 
 ```{r}
