Adding the significant of sex differences on diet to the experimental write-up.

--- a/Experimental Write-up.Rmd
+++ b/Experimental Write-up.Rmd
@@ -29,8 +29,9 @@ source(here("scripts", "Experiment 3.R"))
 
 A linear model was used with quasipoisson to count for overdispersion, significance of day was tested in the model and this was kept as it was significant (F~8,903~ = 0.941, P = 0.05). ANOVA analysis showed that there was significance between the sexes and the interaction effect (F~8,903~ = 35.36, P = <0.001), so this was kept in the model. 
 
-The significance of diets between sexes and within sexes was looked at using a tukey test? Looking at the significance of diets within sexes, there was a significant difference found between a 1:2 diet and an 8:1 diet on the female assay on day 1 and day 2 (Tukey test: t~903~ = -5.088, P < 0.001). On day 1, the there was a mean average of 1.43 +/- S.E. 0.154 flies per patch but on day 2 there was an average of 2.36 +/- S.E. 0.230 flies per patch on the 8:1 diet. 
+The significance of diets between sexes and within sexes was looked at using a tukey test? Looking at the significance of diets within sexes, there was a significant difference found between a 1:2 diet and an 8:1 diet on the female assay on both day 1 and day 2 (Tukey test: t~903~ = -5.088, P < 0.001). On day 1, the there was a mean average of 1.43 +/- S.E. 0.154 flies per patch but on day 2 there was an average of 2.36 +/- S.E. 0.230 flies per patch on the 8:1 diet. 
 
+The significance of sex differences was analysed using a generalised linear model with quasipoisson to count for overdispersion. It was found that there was a significant difference in male and female flies choosing a diet higher in protein (a 2:1 diet). A tukey test was used to analyse this (t~903~8~ = 13.048, P < 0.001). Day was not considered in this model. 
 
 ## Mated vs Virgin females (Experiment 2) - Feeding and Oviposition behaviour
 
