--- a/Data Analysis Notebook.Rmd
+++ b/Data Analysis Notebook.Rmd
@@ -293,9 +293,11 @@ summary(exp2bglm2)
 looking at what looks significant using emmeans function
 values are log values!!
 
+posthoc analysis as has pairwisxe 
+
 mated v mated significant
  1;2 mated - 2;1 mated    -0.5702 0.1218 Inf  -4.682  0.0001
- 1;2 mated - 8;1 mated    -1.0282 0.1134 Inf  -9.065  <.0001 - more intersting 
+ 1;2 mated - 8;1 mated    -1.0282 0.1134 Inf  -9.065  <.0001 - more interesting 
  
 virgin v virgin significant 
 1;2 virgin - 1;8 virgin  -0.5596 0.1036 Inf  -5.402  <.0001
