--- a/Experimental Write-up.Rmd
+++ b/Experimental Write-up.Rmd
@@ -39,15 +39,17 @@ The significance of sex differences was analysed using a generalised linear mode
 
 A generalised linear model was used with quasipoisson to count for overdispersion. Day was dropped from the model as there was found to be no significant effect of including day in the model  (F~1,1159~ = 0.8, P = 0.35). There was found to be a very strong statistically significant effect however on the interaction of diet and type (whether the fly was mated or virgin) (F~3,1159~ = 0.8, P = < 0.0001).
 
-Post hoc analysis showed there were statistically significant differences for the diets chosen between mated and virgin female *drosophila melanogaster*. Between the types of fly, there was a significant difference in choosing a diet high in protein (8:1). (Tukey test: z~1151~ = -9.065, P < 0.0001). With a mean average of 2.74 +/- S.E. 0.138 mated females per patch and a mean average of 1.64 +/- S.E. 0.146 virgin females. This shows that mated females will prefer a diet which is high in protein, indicating that mated females are sensible enough to chose a diet which is good for pregnancy, contributing to the growth of their offspring. 
-
-The significance of diet on mated and virgin *drosophila melanogaster* was a
-
+Post hoc analysis showed there were statistically significant differences for the diets chosen between mated and virgin female *drosophila melanogaster*. Between the types of fly, there was a significant difference in choosing a diet high in protein (8:1). (Tukey test: z~1151~ = 5.301, P < 0.001). With a mean average of 2.74 +/- S.E. 0.138 mated females per patch and a mean average of 1.64 +/- S.E. 0.146 virgin females. This shows that mated females will prefer a diet which is high in protein, indicating that mated females are sensible enough to chose a diet which is good for pregnancy, contributing to the growth of their offspring. 
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 exp2bmatedall_plot + exp2bvirginall_plot
 ```
 **Figure 1: A boxplot comparing feeding behaviour of mated and virgin females.** Figure shows a plot with the mean average +/- S.E. of where the mated females preferred to feed (left), compared with a mean average +/- S.E. of where the virgin females preferred to feed (right). 
+
+
+The significance of diet on mated and virgin *drosophila melanogaster* seperatley to look for the signifiance in choosing a particular diet. It was found that there was a statistically significant difference in choosing a diet high in protein and low in carbohydrate (8:1) over a diet which was low in protein and high in carbohydrate (1:2). Post hoc analysis (Tukey test: z~1151~ = -9.065, P < 0.0001). There was a mean average of 2.74 +/- S.E. 0.138 flies per patch on an 8:1 diet, and only a mean average +/- S.E. 0.085 flies per patch on a 1:2 diet. Emphasising again the significance on a diet which is high in protein for a mated female. 
+
+
 
 ### Oviposition behaviour 
 To test for the significance in oviposition behavaviour in the mated females, a generalised linear model was used with quasipoisson to count for overdispersion. It was found that although there was not a lot of differences, there were significantly more offspring emerging from diets 1:8 than diets 1:2 (P = 0.019). Overall there was a mean average of 114 +/- S.E. 22.5 offspring emerging from 1:8 diets and a mean average of 68.9 +/- 10.6 S.E. offspring emerging from the 1:2 diets (Figure 2). 
