Trying to change font on the experimental write-up pdf.

--- a/Experimental Write-up.Rmd
+++ b/Experimental Write-up.Rmd
@@ -1,8 +1,12 @@
 ---
 title: "Experimental write-up"
-output: pdf_document
-font-family: Calibri
+output:
+  pdf_document
+latex_engine: xelatex
+sansfont: Calibri Light
 ---
+
+
 
 
 ```{r setup, include=FALSE}
