--- a/Experimental Write-up.Rmd
+++ b/Experimental Write-up.Rmd
@@ -68,26 +68,24 @@ Investigating the significance into where virgin females laid their eggs showed 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 mated_females_e2_eggcount_plot + virgin_female_e2_eggcount_plot
 ```
+**Figure 2: A boxplot showing the eggs counted from mated females and virgin females.** Boxplot shows the mean average +/- S.E. that emerged from the varying protein: carbohydrate food patches
+The same experiment was repeated, where the oviposition preference of mated females was investigated. To test for the significance in oviposition behaviour in the mated females, a linear model was used with.
 
-
-
-
-#### Looking at mated females  
-To test for the significance in oviposition behaviour in the mated females, a generalised linear model was used with quasipoisson to count for overdispersion. It was found that although there was not a lot of differences, there were significantly more offspring emerging from diets 1:8 than diets 1:2 (P = 0.019). Overall there was a mean average of 114 +/- S.E. 22.5 offspring emerging from 1:8 diets and a mean average of 68.9 +/- 10.6 S.E. offspring emerging from the 1:2 diets (Figure 2). 
+It was found that although there was not a lot of differences, there were significantly more offspring emerging from diets 1:8 than diets 1:2 (t~~ = 2.379, P = 0.019). Overall there was a mean average of 114 +/- S.E. 22.5 offspring emerging from 1:8 diets and a mean average of 68.9 +/- 10.6 S.E. offspring emerging from the 1:2 diets (Figure 3). 
 As these diets are both diets which are 'low in protein' it shows that although there is not a lot of preference for any particular diets when mated females are laying their eggs.
 Data for virgin female egg laying was not collected for this experiment. 
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 offspring_ex2b_plot
 ```
-**Figure 2: A boxplot of the offspring counted from mated females.** Boxplot shows mean offspring +/- S.E. that emerged from four varying protein: carbohydrate diet patches. 
+**Figure 3: A boxplot of the offspring counted from mated females.** Boxplot shows mean offspring +/- S.E. that emerged from four varying protein: carbohydrate diet patches. 
 
 Data was also collected in a preliminary experiment, where the egg counts of where both virgin females and mated females laid their eggs was collected. It was found that there was no significant differences found in where virgin females laid their eggs and where mated females laid their eggs in this experiment. This experiment also showed however, that there was significantly more eggs laid on the 1:8 diets compared to the 1:2 diets (P = < 0.001), with a mean average of 121 +/-13.7 S.E. eggs laid on 1:8, and a mean average of 40.6 +/- S.E. 14.1 laid on the 1:2 diets. There was also a slight significant difference in eggs laid on the 1:2 diet, and eggs laid on the 8:1 diet (P=0.025), with a mean average of only 4.21 +/- S.E. 1.52 eggs laid on the 8:1 diets. 
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 mated_females_e2_eggcount_plot + virgin_female_e2_eggcount_plot
 ```
-**Figure 3: A boxplot showing the eggs counted from mated females and virgin females.** Boxplot shows the mean average +/- S.E. that emerged from the varying protein: carbohydrate food patches. 
+**Figure 4: A boxplot showing the eggs counted from mated females and virgin females.** Boxplot shows the mean average +/- S.E. that emerged from the varying protein: carbohydrate food patches. 
 
 
 
@@ -100,7 +98,7 @@ A generalized linear model with quasipoisson was used (as there was over-dispers
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 exp3femalesall_plot + exp3both_plot
 ```
-
+**Figure 5: A boxplot showing the eggs counted from mated females and virgin females.** Boxplot shows the mean average +/- S.E. that emerged from the varying protein: carbohydrate food patches
 
 ### Offspring counts
 
@@ -109,7 +107,7 @@ A general linear model was used to test the significance of whether oviposition 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 offspring_both_exp3_plot + offspring_alone_exp3_plot
 ```
-
+**Figure 6: A boxplot showing the eggs counted from mated females and virgin females.** Boxplot shows the mean average +/- S.E. that emerged from the varying protein: carbohydrate food patches
 
 
 
