--- a/Experimental Write-up.Rmd
+++ b/Experimental Write-up.Rmd
@@ -104,7 +104,7 @@ exp3femalesall_plot + exp3both_plot
 
 ### Offspring counts
 
-A general linear model was used to test the significance of whether oviposition preference changed depending on if the mated females were in a plate alone or in a plate with males. There was no significant difference found between the diets chosen depending on the conditions (P = 0.44). 
+A general linear model was used to test the significance of whether oviposition preference changed depending on if the mated females were in a plate alone or in a plate with males. There was no significant difference found between the diets chosen depending on the conditions (ANOVA: P = 0.44). 
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 offspring_both_exp3_plot + offspring_alone_exp3_plot
